--- a/css-helpers.css
+++ b/css-helpers.css
@@ -1,3 +1,6 @@
+/*
+    Margin properties
+*/
 .m0 {
     margin: 0;
 }
@@ -258,6 +261,9 @@
     margin-left: 200px;
 }
 
+/*
+    Padding properties
+*/
 .p0 {
     padding: 0;
 }
