--- a/css/general.css
+++ b/css/general.css
@@ -1,32 +1,34 @@
 /*
+    Helper CSS
+
     General properties that are not belong to any other group.
 */
 
 /* Percentage width */
 .pct50 {
-    width: 50%;
+	width: 50%;
 }
 
 .pct100 {
-    width: 100%;
+	width: 100%;
 }
 
 /* Div table display */
 .div-table {
-    display: table;
+	display: table;
 }
 
 .div-table-row {
-    display: table-row;
-    vertical-align: top;
+	display: table-row;
+	vertical-align: top;
 }
 
 .div-table-cell {
-    display: table-cell;
-    vertical-align: top;
+	display: table-cell;
+	vertical-align: top;
 }
 
 /* Cursor */
 .cursor-pointer {
-    cursor: pointer;
+	cursor: pointer;
 }
