--- a/css/padding.css
+++ b/css/padding.css
@@ -1,262 +1,264 @@
 /*
+    Helper CSS
+
     Padding properties
 */
 .p0 {
-    padding: 0;
+	padding: 0;
 }
 
 .p5 {
-    padding: 5px;
+	padding: 5px;
 }
 
 .p10 {
-    padding: 10px;
+	padding: 10px;
 }
 
 .p15 {
-    padding: 15px;
+	padding: 15px;
 }
 
 .p20 {
-    padding: 20px;
+	padding: 20px;
 }
 
 .p30 {
-    padding: 30px;
+	padding: 30px;
 }
 
 .p40 {
-    padding: 40px;
+	padding: 40px;
 }
 
 .p50 {
-    padding: 50px;
+	padding: 50px;
 }
 
 .p60 {
-    padding: 60px;
+	padding: 60px;
 }
 
 .p80 {
-    padding: 80px;
+	padding: 80px;
 }
 
 .p100 {
-    padding: 100px;
+	padding: 100px;
 }
 
 .p150 {
-    padding: 150px;
+	padding: 150px;
 }
 
 .p200 {
-    padding: 200px;
+	padding: 200px;
 }
 
 .p0top {
-    padding-top: 0;
+	padding-top: 0;
 }
 
 .p5top {
-    padding-top: 5px;
+	padding-top: 5px;
 }
 
 .p10top {
-    padding-top: 10px;
+	padding-top: 10px;
 }
 
 .p15top {
-    padding-top: 15px;
+	padding-top: 15px;
 }
 
 .p20top {
-    padding-top: 20px;
+	padding-top: 20px;
 }
 
 .p30top {
-    padding-top: 30px;
+	padding-top: 30px;
 }
 
 .p40top {
-    padding-top: 40px;
+	padding-top: 40px;
 }
 
 .p50top {
-    padding-top: 50px;
+	padding-top: 50px;
 }
 
 .p60top {
-    padding-top: 60px;
+	padding-top: 60px;
 }
 
 .p80top {
-    padding-top: 80px;
+	padding-top: 80px;
 }
 
 .p100top {
-    padding-top: 100px;
+	padding-top: 100px;
 }
 
 .p150top {
-    padding-top: 150px;
+	padding-top: 150px;
 }
 
 .p200top {
-    padding-top: 200px;
+	padding-top: 200px;
 }
 
 .p0rgt {
-    padding-right: 0;
+	padding-right: 0;
 }
 
 .p5rgt {
-    padding-right: 5px;
+	padding-right: 5px;
 }
 
 .p10rgt {
-    padding-right: 10px;
+	padding-right: 10px;
 }
 
 .p15rgt {
-    padding-right: 15px;
+	padding-right: 15px;
 }
 
 .p20rgt {
-    padding-right: 20px;
+	padding-right: 20px;
 }
 
 .p30rgt {
-    padding-right: 30px;
+	padding-right: 30px;
 }
 
 .p40rgt {
-    padding-right: 40px;
+	padding-right: 40px;
 }
 
 .p50rgt {
-    padding-right: 50px;
+	padding-right: 50px;
 }
 
 .p60rgt {
-    padding-right: 60px;
+	padding-right: 60px;
 }
 
 .p80rgt {
-    padding-right: 80px;
+	padding-right: 80px;
 }
 
 .p100rgt {
-    padding-right: 100px;
+	padding-right: 100px;
 }
 
 .p150rgt {
-    padding-right: 150px;
+	padding-right: 150px;
 }
 
 .p200rgt {
-    padding-right: 200px;
+	padding-right: 200px;
 }
 
 .p0btm {
-    padding-bottom: 0;
+	padding-bottom: 0;
 }
 
 .p5btm {
-    padding-bottom: 5px;
+	padding-bottom: 5px;
 }
 
 .p10btm {
-    padding-bottom: 10px;
+	padding-bottom: 10px;
 }
 
 .p15btm {
-    padding-bottom: 15px;
+	padding-bottom: 15px;
 }
 
 .p20btm {
-    padding-bottom: 20px;
+	padding-bottom: 20px;
 }
 
 .p30btm {
-    padding-bottom: 30px;
+	padding-bottom: 30px;
 }
 
 .p40btm {
-    padding-bottom: 40px;
+	padding-bottom: 40px;
 }
 
 .p50btm {
-    padding-bottom: 50px;
+	padding-bottom: 50px;
 }
 
 .p60btm {
-    padding-bottom: 60px;
+	padding-bottom: 60px;
 }
 
 .p80btm {
-    padding-bottom: 80px;
+	padding-bottom: 80px;
 }
 
 .p100btm {
-    padding-bottom: 100px;
+	padding-bottom: 100px;
 }
 
 .p150btm {
-    padding-bottom: 150px;
+	padding-bottom: 150px;
 }
 
 .p200btm {
-    padding-bottom: 200px;
+	padding-bottom: 200px;
 }
 
 .p0lft {
-    padding-left: 0;
+	padding-left: 0;
 }
 
 .p5lft {
-    padding-left: 5px;
+	padding-left: 5px;
 }
 
 .p10lft {
-    padding-left: 10px;
+	padding-left: 10px;
 }
 
 .p15lft {
-    padding-left: 15px;
+	padding-left: 15px;
 }
 
 .p20lft {
-    padding-left: 20px;
+	padding-left: 20px;
 }
 
 .p30lft {
-    padding-left: 30px;
+	padding-left: 30px;
 }
 
 .p40lft {
-    padding-left: 40px;
+	padding-left: 40px;
 }
 
 .p50lft {
-    padding-left: 50px;
+	padding-left: 50px;
 }
 
 .p60lft {
-    padding-left: 60px;
+	padding-left: 60px;
 }
 
 .p80lft {
-    padding-left: 80px;
+	padding-left: 80px;
 }
 
 .p100lft {
-    padding-left: 100px;
+	padding-left: 100px;
 }
 
 .p150lft {
-    padding-left: 150px;
+	padding-left: 150px;
 }
 
 .p200lft {
-    padding-left: 200px;
+	padding-left: 200px;
 }
