--- a/css/margin.css
+++ b/css/margin.css
@@ -1,262 +1,264 @@
 /*
+    Helper CSS
+
     Margin properties
 */
 .m0 {
-    margin: 0;
+	margin: 0;
 }
 
 .m5 {
-    margin: 5px;
+	margin: 5px;
 }
 
 .m10 {
-    margin: 10px;
+	margin: 10px;
 }
 
 .m15 {
-    margin: 15px;
+	margin: 15px;
 }
 
 .m20 {
-    margin: 20px;
+	margin: 20px;
 }
 
 .m30 {
-    margin: 30px;
+	margin: 30px;
 }
 
 .m40 {
-    margin: 40px;
+	margin: 40px;
 }
 
 .m50 {
-    margin: 50px;
+	margin: 50px;
 }
 
 .m60 {
-    margin: 60px;
+	margin: 60px;
 }
 
 .m80 {
-    margin: 80px;
+	margin: 80px;
 }
 
 .m100 {
-    margin: 100px;
+	margin: 100px;
 }
 
 .m150 {
-    margin: 150px;
+	margin: 150px;
 }
 
 .m200 {
-    margin: 200px;
+	margin: 200px;
 }
 
 .m0top {
-    margin-top: 0;
+	margin-top: 0;
 }
 
 .m5top {
-    margin-top: 5px;
+	margin-top: 5px;
 }
 
 .m10top {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 .m15top {
-    margin-top: 15px;
+	margin-top: 15px;
 }
 
 .m20top {
-    margin-top: 20px;
+	margin-top: 20px;
 }
 
 .m30top {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 
 .m40top {
-    margin-top: 40px;
+	margin-top: 40px;
 }
 
 .m50top {
-    margin-top: 50px;
+	margin-top: 50px;
 }
 
 .m60top {
-    margin-top: 60px;
+	margin-top: 60px;
 }
 
 .m80top {
-    margin-top: 80px;
+	margin-top: 80px;
 }
 
 .m100top {
-    margin-top: 100px;
+	margin-top: 100px;
 }
 
 .m150top {
-    margin-top: 150px;
+	margin-top: 150px;
 }
 
 .m200top {
-    margin-top: 200px;
+	margin-top: 200px;
 }
 
 .m0rgt {
-    margin-right: 0;
+	margin-right: 0;
 }
 
 .m5rgt {
-    margin-right: 5px;
+	margin-right: 5px;
 }
 
 .m10rgt {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .m15rgt {
-    margin-right: 15px;
+	margin-right: 15px;
 }
 
 .m20rgt {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 
 .m30rgt {
-    margin-right: 30px;
+	margin-right: 30px;
 }
 
 .m40rgt {
-    margin-right: 40px;
+	margin-right: 40px;
 }
 
 .m50rgt {
-    margin-right: 50px;
+	margin-right: 50px;
 }
 
 .m60rgt {
-    margin-right: 60px;
+	margin-right: 60px;
 }
 
 .m80rgt {
-    margin-right: 80px;
+	margin-right: 80px;
 }
 
 .m100rgt {
-    margin-right: 100px;
+	margin-right: 100px;
 }
 
 .m150rgt {
-    margin-right: 150px;
+	margin-right: 150px;
 }
 
 .m200rgt {
-    margin-right: 200px;
+	margin-right: 200px;
 }
 
 .m0btm {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .m5btm {
-    margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 .m10btm {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .m15btm {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .m20btm {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .m30btm {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .m40btm {
-    margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 
 .m50btm {
-    margin-bottom: 50px;
+	margin-bottom: 50px;
 }
 
 .m60btm {
-    margin-bottom: 60px;
+	margin-bottom: 60px;
 }
 
 .m80btm {
-    margin-bottom: 80px;
+	margin-bottom: 80px;
 }
 
 .m100btm {
-    margin-bottom: 100px;
+	margin-bottom: 100px;
 }
 
 .m150btm {
-    margin-bottom: 150px;
+	margin-bottom: 150px;
 }
 
 .m200btm {
-    margin-bottom: 200px;
+	margin-bottom: 200px;
 }
 
 .m0lft {
-    margin-left: 0;
+	margin-left: 0;
 }
 
 .m5lft {
-    margin-left: 5px;
+	margin-left: 5px;
 }
 
 .m10lft {
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .m15lft {
-    margin-left: 15px;
+	margin-left: 15px;
 }
 
 .m20lft {
-    margin-left: 20px;
+	margin-left: 20px;
 }
 
 .m30lft {
-    margin-left: 30px;
+	margin-left: 30px;
 }
 
 .m40lft {
-    margin-left: 40px;
+	margin-left: 40px;
 }
 
 .m50lft {
-    margin-left: 50px;
+	margin-left: 50px;
 }
 
 .m60lft {
-    margin-left: 60px;
+	margin-left: 60px;
 }
 
 .m80lft {
-    margin-left: 80px;
+	margin-left: 80px;
 }
 
 .m100lft {
-    margin-left: 100px;
+	margin-left: 100px;
 }
 
 .m150lft {
-    margin-left: 150px;
+	margin-left: 150px;
 }
 
 .m200lft {
-    margin-left: 200px;
+	margin-left: 200px;
 }
